# diglm

./: .readthedocs.yaml  .travis.yml  README.md  README.rst  pyproject.toml  requirements.TXT  requirements.txt
.github/workflows/: pylint.yml
SpQR-Flow/: __init__.py  diglm.py  download.py  plot_utils.py  spline_params.py  spqr.py  utils.py  version.py
SpQR-Flow/model_test/: download.py  higgs.py  test_download.py
colab_notebooks/: SpQR_colab.ipynb  higgs_diglm_nb.ipynb
diglm/: download.py
docs/: requirements.txt
docs/source/: api.rst  api.rst~  conf.py  conf.py~  contents.rst  diglm.rst  download_api.rst  index.rst  index.rst~  intro.rst  plot_utils_api.rst  references.bib  spqr.rst  tutorial.rst  usage.rst  usage.rst~
docs/source/api/: api.rst  diglm.rst  download_api.rst  index.rst  plot_utils_api.rst  spqr.rst
docs/source/notebooks/: SpQR_nb.ipynb  diglm_nb.ipynb  higgs_diglm_nb.ipynb  higgs_uci.ipynb  index.rst
notebooks/: SpQR_nb.ipynb  diglm_nb.ipynb  higgs_diglm_nb.ipynb  model_higgs.ipynb
src/: diglm.py  plot_utils.py  spqr.py
tests/: plot_tests.py  test_diglm.py  test_download.py  test_spqr.py
