[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SpQR-Flow"
authors = [{name = "M. Riggirello & A. Venturini", email = "m.riggirello@studenti.unipi.it"}]
#dynamic = ["version", "description"]
version = "0.1.0"
description = "A normalizing-flow application"
