[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diglm"
authors = [{name = "M. Riggirello", email = "marcoriggirello@gmail.com"}, {name = "A. Venturini", email = "antoinev151@gmail.com"}]
version = "0.1.0"
description = "diglm is a machine learning model built from TensorFlow utilities."
